--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,4 +1,4 @@
-/* BASIC STYLES HERE */
+/* SECTION Elements & Others */
 
 img{
     height: 400px;
@@ -6,6 +6,14 @@ img{
     cursor: pointer;
 }
 
-.hundo{
-    height: 100vh;
+h1{
+    font-size: 3em;
+    font-weight: bold;
 }
+
+/* SECTION Classes */
+
+
+
+/* SECTION IDs */
+
